--- a/apps/environments/dev/podinfo/kustomization.yaml
+++ b/apps/environments/dev/podinfo/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../bases/podinfo # base could also be in the app's source code repo
+components:
+  - app-version
 namespace: dev-podinfo
 namePrefix: dev-
