--- a/apps/environments/dev/podinfo/kustomization.yaml
+++ b/apps/environments/dev/podinfo/kustomization.yaml
@@ -6,3 +6,21 @@ components:
   - app-version
 namespace: dev-podinfo
 namePrefix: dev-
+
+patches:
+- target:
+    kind: Deployment
+    name: podinfo
+  patch: |
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: podinfo
+    spec:
+      template:
+        spec:
+          containers:
+          - name: podinfod
+            env:
+            - name: PODINFO_UI_COLOR
+              value: "#27870c"
