make apps kustomization depend on infra-configs
Signed-off-by: Thomas Stadler <thomas@thomasst.xyz>

--- a/clusters/my-cluster/apps.yaml
+++ b/clusters/my-cluster/apps.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
+  dependsOn:
+    - name: infra-configs
   sourceRef:
     kind: GitRepository
     name: flux-system
