--- a/clusters/dev/apps.yaml
+++ b/clusters/dev/apps.yaml
@@ -15,3 +15,17 @@
 #   prune: true
 #   wait: true
 #   timeout: 5m0s
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: podinfo
+  namespace: flux-system
+spec:
+  interval: 5m0s
+  path: ./
+  prune: true
+  sourceRef:
+    kind: OCIRepository
+    name: podinfo
+
