--- a/apps/environments/dev/podinfo/app-version/kustomization.yaml
+++ b/apps/environments/dev/podinfo/app-version/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Component
 images:
 - name: ghcr.io/stefanprodan/podinfo
   newName: ghcr.io/thomasstxyz/podinfo
-  newTag: ghcr.io/thomasstxyz/podinfo:1.0.4 # {"$imagepolicy": "flux-system:podinfo"}
+  newTag: 1.0.4 # {"$imagepolicy": "flux-system:podinfo:tag"}
