(dev): change PODINFO_UI_COLOR
Signed-off-by: Thomas Stadler <thomas@thomasst.xyz>

--- a/apps/environments/dev/podinfo/kustomization.yaml
+++ b/apps/environments/dev/podinfo/kustomization.yaml
@@ -23,4 +23,4 @@ patches:
           - name: podinfod
             env:
             - name: PODINFO_UI_COLOR
-              value: "#27870c"
+              value: "#a7870c"
