--- a/clusters/dev/podinfo-image-update.yaml
+++ b/clusters/dev/podinfo-image-update.yaml
@@ -20,6 +20,27 @@ spec:
     semver:
       range: 1.0.x
 ---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImageRepository
+metadata:
+  name: podinfo-dev-env
+  namespace: flux-system
+spec:
+  image: ghcr.io/thomasstxyz/manifests/podinfo-dev-env
+  interval: 1m0s
+---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImagePolicy
+metadata:
+  name: podinfo-dev-env
+  namespace: flux-system
+spec:
+  imageRepositoryRef:
+    name: podinfo-dev-env
+  policy:
+    semver:
+      range: 1.0.x
+---
 apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImageUpdateAutomation
 metadata:
