--- a/clusters/dev/apps.yaml
+++ b/clusters/dev/apps.yaml
@@ -1,31 +1,31 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-# kind: Kustomization
-# metadata:
-#   name: apps
-#   namespace: flux-system
-# spec:
-#   interval: 10m0s
-#   dependsOn:
-#     - name: infra-configs
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   path: ./apps/environments/dev
-#   prune: true
-#   wait: true
-#   timeout: 5m0s
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: podinfo
+  name: apps
   namespace: flux-system
 spec:
-  interval: 5m0s
-  path: ./
-  prune: true
+  interval: 10m0s
+  dependsOn:
+    - name: infra-configs
   sourceRef:
-    kind: OCIRepository
-    name: podinfo
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/environments/dev
+  prune: true
+  wait: true
+  timeout: 5m0s
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# kind: Kustomization
+# metadata:
+#   name: podinfo
+#   namespace: flux-system
+# spec:
+#   interval: 5m0s
+#   path: ./
+#   prune: true
+#   sourceRef:
+#     kind: OCIRepository
+#     name: podinfo
 
