--- a/apps/environments/prod/podinfo/app-version/kustomization.yaml
+++ b/apps/environments/prod/podinfo/app-version/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
 - name: ghcr.io/stefanprodan/podinfo
-  newTag: 6.3.1
+  newName: ghcr.io/thomasstxyz/podinfo
+  newTag: 1.0.4 # {"$imagepolicy": "flux-system:podinfo:tag"}
